[DEBUG] apply new code format