@@ -1,5 +1,11 @@
 package com.sky.codingame.training;
 
+import com.loic.algo.common.Pair;
+import com.sky.problem.Problem;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -7,105 +13,96 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import com.loic.algo.common.Pair;
-import com.sky.problem.Problem;
-
 /**
  * https://www.codingame.com/ide/2441721b72dda76188c9dae6948ffed73872610
  */
 public class ShortestTransformPath<T> implements Problem<Void, Integer> {
-	private static final Logger Log = LoggerFactory.getLogger(ShortestTransformPath.class);
+    private static final Logger Log = LoggerFactory.getLogger(ShortestTransformPath.class);
 
-	private Map<T, HashSet<T>> treeMap;
+    private Map<T, HashSet<T>> treeMap;
+    private Comparator<Pair<Integer, Integer>> longestPathComparator = new Comparator<Pair<Integer, Integer>>() {
+        @Override
+        public int compare(Pair<Integer, Integer> o1, Pair<Integer, Integer> o2) {
+            return o2.getFirst().compareTo(o1.getFirst());
+        }
+    };
+    private Comparator<Pair<Integer, Integer>> depthComparator = new Comparator<Pair<Integer, Integer>>() {
+        @Override
+        public int compare(Pair<Integer, Integer> o1, Pair<Integer, Integer> o2) {
+            return o2.getSecond().compareTo(o1.getSecond());
+        }
+    };
 
-	public ShortestTransformPath() {
-		treeMap = new HashMap<T, HashSet<T>>();
-	}
+    public ShortestTransformPath() {
+        treeMap = new HashMap<T, HashSet<T>>();
+    }
 
-	@Override
-	public Integer resolve(Void param) {
-		return getShortestTransformPathLength();
-	}
+    @Override
+    public Integer resolve(Void param) {
+        return getShortestTransformPathLength();
+    }
 
-	private Comparator<Pair<Integer, Integer>> longestPathComparator = new Comparator<Pair<Integer, Integer>>() {
-		@Override
-		public int compare(Pair<Integer, Integer> o1, Pair<Integer, Integer> o2) {
-			return o2.getFirst().compareTo(o1.getFirst());
-		}
-	};
+    public void clear() {
+        treeMap.clear();
+    }
 
-	private Comparator<Pair<Integer, Integer>> depthComparator = new Comparator<Pair<Integer, Integer>>() {
-		@Override
-		public int compare(Pair<Integer, Integer> o1, Pair<Integer, Integer> o2) {
-			return o2.getSecond().compareTo(o1.getSecond());
-		}
-	};
+    public int getShortestTransformPathLength() {
+        int longPath = getLongestPath(treeMap.keySet().iterator().next()).getFirst();
+        return (longPath + 1) / 2;
+    }
 
-	public void clear() {
-		treeMap.clear();
-	}
+    /**
+     * @param node
+     * @return pair, first : longest path length, second : depth
+     */
+    private Pair<Integer, Integer> getLongestPath(T node) {
+        HashSet<T> children = treeMap.get(node);
+        treeMap.remove(node);
+        if (children == null || children.isEmpty()) {
+            return new Pair<Integer, Integer>(0, 0);
+        }
+        ArrayList<Pair<Integer, Integer>> childrenResult = new ArrayList<Pair<Integer, Integer>>(children.size());
+        for (T child : children) {
+            if (treeMap.containsKey(child)) {
+                childrenResult.add(getLongestPath(child));
+            }
+        }
+        if (childrenResult.isEmpty()) {
+            return new Pair<Integer, Integer>(0, 0);
+        } else if (childrenResult.size() == 1) {
+            int depth = 1 + childrenResult.get(0).getSecond();
+            int longPath = Math.max(depth, childrenResult.get(0).getFirst());
 
-	public int getShortestTransformPathLength() {
-		int longPath = getLongestPath(treeMap.keySet().iterator().next()).getFirst();
-		return (longPath + 1) / 2;
-	}
+            return new Pair<Integer, Integer>(longPath, depth);
+        } else {
+            Collections.sort(childrenResult, longestPathComparator);
+            int childLongPath = childrenResult.get(0).getFirst();
 
-	/**
-	 * 
-	 * @param node
-	 * @return pair, first : longest path length, second : depth
-	 */
-	private Pair<Integer, Integer> getLongestPath(T node) {
-		HashSet<T> children = treeMap.get(node);
-		treeMap.remove(node);
-		if (children == null || children.isEmpty()) {
-			return new Pair<Integer, Integer>(0, 0);
-		}
-		ArrayList<Pair<Integer, Integer>> childrenResult = new ArrayList<Pair<Integer, Integer>>(children.size());
-		for (T child : children) {
-			if (treeMap.containsKey(child)) {
-				childrenResult.add(getLongestPath(child));
-			}
-		}
-		if (childrenResult.isEmpty()) {
-			return new Pair<Integer, Integer>(0, 0);
-		} else if (childrenResult.size() == 1) {
-			int depth = 1 + childrenResult.get(0).getSecond();
-			int longPath = Math.max(depth, childrenResult.get(0).getFirst());
+            Collections.sort(childrenResult, depthComparator);
+            int maxDepth0 = childrenResult.get(0).getSecond();
+            int maxDepth1 = childrenResult.get(1).getSecond();
 
-			return new Pair<Integer, Integer>(longPath, depth);
-		} else {
-			Collections.sort(childrenResult, longestPathComparator);
-			int childLongPath = childrenResult.get(0).getFirst();
+            int longPath = Math.max(maxDepth0 + maxDepth1 + 2, childLongPath);
 
-			Collections.sort(childrenResult, depthComparator);
-			int maxDepth0 = childrenResult.get(0).getSecond();
-			int maxDepth1 = childrenResult.get(1).getSecond();
+            return new Pair<Integer, Integer>(longPath, maxDepth0 + 1);
+        }
+    }
 
-			int longPath = Math.max(maxDepth0 + maxDepth1 + 2, childLongPath);
+    public ShortestTransformPath<T> addNewLien(T from, T to) {
+        HashSet<T> fromChildren = treeMap.get(from);
+        HashSet<T> toChildren = treeMap.get(to);
+        if (fromChildren == null) {
+            fromChildren = new HashSet<>();
+            treeMap.put(from, fromChildren);
+        }
+        if (toChildren == null) {
+            toChildren = new HashSet<>();
+            treeMap.put(to, toChildren);
+        }
 
-			return new Pair<Integer, Integer>(longPath, maxDepth0 + 1);
-		}
-	}
+        fromChildren.add(to);
+        toChildren.add(from);
 
-	public ShortestTransformPath<T> addNewLien(T from, T to) {
-		HashSet<T> fromChildren = treeMap.get(from);
-		HashSet<T> toChildren = treeMap.get(to);
-		if (fromChildren == null) {
-			fromChildren = new HashSet<>();
-			treeMap.put(from, fromChildren);
-		}
-		if (toChildren == null) {
-			toChildren = new HashSet<>();
-			treeMap.put(to, toChildren);
-		}
-
-		fromChildren.add(to);
-		toChildren.add(from);
-
-		return this;
-	}
+        return this;
+    }
 }
